--- a/src/static/02-state-handler.html
+++ b/src/static/02-state-handler.html
@@ -40,7 +40,7 @@
 
     <style>
         .img {
-        animation: rotate_image 1s linear infinite; /* 6초 동안 회전, 무한 반복 */
+        animation: rotate_image 1s linear infinite; /* 1초 동안 회전, 무한 반복 */
         transform-origin: 50% 50%; /* 중앙을 기준으로 회전 */
         }
     
@@ -49,7 +49,7 @@
             transform: rotate(0deg); /* 시작 각도 */
         }
         to {
-            transform: rotate(-360deg); /* 끝 각도 */
+            transform: rotate(-360deg); /* 끝 각도 (시계 반대방향) */
         }
         }
     </style>
@@ -148,9 +148,15 @@
             });
 
             // 키보드 입력 감지
+            let canThrowKnife = true; // 쿨타임 상태를 추적하는 변수
+            const knifeCooldown = 2000; // 쿨타임 시간 (밀리초)
             window.addEventListener("keydown", function (e) {
-                if (e.key === 'q') {
+                if (e.key === 'q' && canThrowKnife) {
                     room.send("throwKnife", { targetX: mouseX, targetY: mouseY });
+                    canThrowKnife = false; // 쿨타임 시작
+                    setTimeout(() => {
+                        canThrowKnife = true; // 쿨타임 종료
+                    }, knifeCooldown);
                 }
             });
 
